@@ -266,4 +266,12 @@
   <AT_hydroheliumion_D.tools.0.label>Nozzle</AT_hydroheliumion_D.tools.0.label>
   <Bullethydroheliumion_D.label>Acid Refleum gas</Bullethydroheliumion_D.label>
   <Filth_ApproachSmoke_A.label>Acid Refleum gas</Filth_ApproachSmoke_A.label>
+  <AT_Apparel_bunker.label>Quick T-bunker Kit</AT_Apparel_bunker.label>
+  <AT_Apparel_bunker.description>Improvisable field cover that was developed by Anty to protect themselves from the ever-changing battlefield. It disintegrates over time.</AT_Apparel_bunker.description>
+  <AT_Apparel_bunker.comps.CompReloadable.chargeNoun>T-Bunker Shell</AT_Apparel_bunker.comps.CompReloadable.chargeNoun>
+  <AT_Apparel_bunker.verbs.0.label>pop T-bunker kit</AT_Apparel_bunker.verbs.0.label>
+  <AT_Apparel_orbitalbombardment.label>Anty orbital support kit</AT_Apparel_orbitalbombardment.label>
+  <AT_Apparel_orbitalbombardment.description>It is a device that can send a signal to the Anty fleet waiting in planetary orbit to request an orbital bombardment.\n\nAll targets within range are bombarded, but buildings are not.</AT_Apparel_orbitalbombardment.description>
+  <AT_Apparel_orbitalbombardment.comps.CompReloadable.chargeNoun>Recyclecore</AT_Apparel_orbitalbombardment.comps.CompReloadable.chargeNoun>
+  <AT_Apparel_orbitalbombardment.verbs.0.label>call orbital bombardment</AT_Apparel_orbitalbombardment.verbs.0.label>
 </LanguageData>
